--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </table>
 
     <p>GitHub repository link:
-        <a href="https://github.com/ArtInt-pro/2nd-HTML-Assignment.git" target="_blank">https://github.com/ArtInt-pro
+        <a href="https://github.com/ArtInt-pro/2nd-HTML-Assignment.git" target="_blank">https://github.com/artint-pro
         </a>
     </p>
 </body>
